--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" type="text/css" href="../css/rulet.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/rps.css">
+<link rel="stylesheet" type="text/css" href="../css/loading.css">
 </head>
 <body data-localization='rps'>
 <div class="navigationBar" data-menu-EN="RPS Battle" data-menu-RU="Камень-ножницы-бумага"></div>
