--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -25,8 +25,9 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rulet.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
+<link rel="stylesheet" type="text/css" href="../css/loading.css">
 </head>
-<body data-localization="jackpot">
+<body data-localization="jackpot" data-inventory='no-load'>
 <div id="containter">
 <div class="navigationBar" data-menu-EN="Jackpot" data-menu-RU="Джекпот"></div>
 <div id="circle"></div>
