--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -15,7 +15,7 @@
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
-<script src="../scripts/coinflip.js"></script>
+<script src="../scripts/min/coinflip.js"></script>
 
 <script src="../scripts/localization.js"></script>
 
